tests/ui/consts/slice-index-overflow-issue-130284.stderr
error[E0080]: overflowing pointer arithmetic: the total offset in bytes does not fit in an `isize`
  --> $DIR/slice-index-overflow-issue-130284.rs:7:20
   |
LL |         let _ice = (*fat)[usize::MAX - 1];
   |                    ^^^^^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
